--- a/_posts/2025-05-13-first.md
+++ b/_posts/2025-05-13-first.md
@@ -1,6 +1,10 @@
 ---
 layout: single
 title:  "첫 포스팅 입니다. 안녕하세요."
+categories: coding
+tag: [c++,blog]
+toc: true
+author_profile: false
 ---
 
 # 오늘 처음 블로그를 만들었어요.
