--- a/_posts/2025-05-13-list1.md
+++ b/_posts/2025-05-13-list1.md
@@ -50,3 +50,8 @@ classes: wide
 2. fullListException(): 리스트가 만원이라 처리 불가능한 상황
 3. emptyListException(): 리스트가 비어있어 처리 불가능한 상황
 
+
+
+### 소스코드
+
+코드는 https://github.com/KimHyunWoo0102/data_structure 깃허브에 업로드 하였다!!
