이미지 변경

--- a/_posts/2025-05-16-list3.md
+++ b/_posts/2025-05-16-list3.md
@@ -252,5 +252,4 @@ int main() {
 
 다음 코드 실행시에 결과는 다음과 같았다.
 
-![image-20250516011903687](../images/2025-05-16-list3/image-20250516011903687.png)
-
+![test_result](../images/2025-05-16-list3/test_result.png)
