타이포라 설정 수정

--- a/_posts/2025-05-16-list3.md
+++ b/_posts/2025-05-16-list3.md
@@ -6,7 +6,7 @@ tag: [c++,data_structure]
 toc: true
 author_profile: false
 classes: wide
-
+typora-root-url: ../
 ---
 
 
@@ -252,4 +252,4 @@ int main() {
 
 다음 코드 실행시에 결과는 다음과 같았다.
 
-![test_result](../images/2025-05-16-list3/test_result.png)
+![test_result](/images/2025-05-16-list3/test_result.png)
