feat: 리스트 글 정리 및 다시시작
c로 시작해서 c++로 넘어가는 구조로 시작하고 싶어짐.
또한 내가 만든 커스텀 자료구조를 가지고 주소록 프로젝트까지 마무리 하고싶다.

--- a/_posts/2025-05-13-list2.md
+++ b/_posts/2025-05-13-list2.md
@@ -1,240 +1,146 @@
 ---
 layout: single
 title:  "자료구조 - 리스트2: 인터페이스 정의"
-categories: 자료구조
-tag: [c++,data_structure]
+categories: c++ 자료구조 (중단)
+tag: [c++, data_structure]
 toc: true
 author_profile: false
 classes: wide
 ---
 
+# 🧩 계획
 
+다양한 형식의 리스트를 구현 가능하게 하기 위해 **리스트 인터페이스**를 정의합니다.
 
+- **템플릿**을 활용하여 다양한 타입의 데이터를 저장할 수 있도록 설계합니다.
+- 이를 통해 리스트의 내부 구현을 `ArrayList`, `VectorList`, `LinkedList` 등으로 자유롭게 교체할 수 있습니다.
 
+---
 
-# 계획
+## 📂 리스트 종류
 
-다양한 형식의 리스트를 만들게 하기 위해서 인터페이스를 정의한다.
+구현하고자 하는 리스트의 종류는 다음과 같습니다:
 
-templete을 활용하여 다양한 데이터를 저장하며 처리하게끔 한다.
+1. **배열 기반 리스트**
+   - `ArrayList`
+2. **벡터 기반 리스트**
+   - `VectorList`
+3. **연결 리스트**
+   - `단일 연결 리스트 (SingleLinkedList)`
+   - `이중 연결 리스트 (DoublyLinkedList)`
+   - `환형 연결 리스트 (CircularLinkedList)`
 
+---
 
+# ⚙️ 구현
 
-리스트의 종류는 다음과 같다.
+### ✅ 테스트 코드
 
+먼저 인터페이스 구현을 검증할 수 있도록 **리스트 테스트 클래스**를 작성합니다.
 
+#### 📄 `ListTest.h`
 
-1. array list
-
-2. vector list 
-
-3. linked list
-
-   1. single linked list
-   2. doubly linked list
-   3. circle linked list
-
-   
-
-# 구현
-
-우선 테스트 코드 부터 작성해 보자.
-
-### 테스트 코드
-
-```c++
-//ListTest.h
+```cpp
 #pragma once
 #include "IList.h"
-#include"Exception.h"
+#include "Exception.h"
 
 template<typename T, class ListType>
 class ListTest {
 public:
-	ListTest(ListType &list,const std::vector<T>test_case):_list(list),_test_case(test_case){}
-	~ListTest() = default;
+    ListTest(ListType& list, const std::vector<T> test_case)
+        : _list(list), _test_case(test_case) {}
+    ~ListTest() = default;
 
-	void TestList();
-	void testListInitialization();
-	void testListAppend();
-	void testListRemove();
-    void appendAndCheck(const T& element, bool isFront);
+    void TestList();
+    void testListInitialization();
+    void testListAppend();
+    void testListRemove();
+
 private:
-	ListType &_list;
-	std::vector<T>_test_case;
+    void appendAndCheck(const T& element, bool isFront);
+    ListType& _list;
+    std::vector<T> _test_case;
 };
-
-template<typename T, class ListType>
-inline void ListTest<T, ListType>::TestList()
-try {
-    testListInitialization();
-    testListAppend();
-    testListRemove();
-}
-catch (const InitializationFailureException& e) {
-    std::cerr << "Initialization test failed: " << e.what() << std::endl;
-}
-catch (const AppendFailureException& e) {
-    std::cerr << "Append test failed: " << e.what() << std::endl;
-}
-catch (const RemoveFailureException& e) {
-    std::cerr << "Remove test failed: " << e.what() << std::endl;
-}
-catch (const std::exception& e) {
-    std::cerr << "Unexpected error: " << e.what() << std::endl;
-}
-
-template<typename T, class ListType>
-inline void ListTest<T, ListType>::testListInitialization()
-try {
-    if (!_list.isEmpty())
-        throw InitializationFailureException(__func__,
-                                             "List is not empty on initialization.");
-    if (_list.size() != 0)
-        throw InitializationFailureException(__func__, 
-                                             "List size is not zero on initialization.");
-}
-catch (const InitializationFailureException& e) {
-    throw;  // Re-throw the exception for external handling
-}
-
-template<typename T, class ListType>
-void ListTest<T, ListType>::testListAppend() {
-    try {
-        size_t size = _test_case.size();
-        // First, append elements from the front (first)
-        for (auto& element : _test_case) {
-            appendAndCheck(element, true); // Append to the front and check
-            ++size;
-        }
-
-        // Reverse the test_case vector
-        std::vector<T> reversed_test_case = _test_case;
-        std::reverse(reversed_test_case.begin(), reversed_test_case.end());
-
-        // Then, append elements from the back (last) after reversing the vector
-        for (auto& element : reversed_test_case) {
-            appendAndCheck(element, false); // Append to the back and check
-            ++size;
-        }
-
-        _list.append(size, _test_case[0]);
-        if (_list.size() == size || _list.get(size) != _test_case[0])
-            throw AppendFailureException(__func__, "Failed to append to the middle of the list.");
-    }
-    catch (const AppendFailureException& e) {
-        throw;  // Re-throw the exception for external handling
-    }
-}
-
-// Helper function to handle append operations
-template<typename T, class ListType>
-void ListTest<T, ListType>::appendAndCheck(const T& element, bool isFront) {
-    if (isFront) {
-        _list.append_first(element);  // Add to the front of the list
-        if (_list.size() == 0 || _list.get(0) != element) {
-            throw AppendFailureException(__func__, "Failed to append to the front of the list.");
-        }
-    }
-    else {
-        _list.append_last(element);  // Add to the end of the list
-        if (_list.size() == 0 || _list.get(_list.size() - 1) != element) {
-            throw AppendFailureException(__func__, "Failed to append to the back of the list.");
-        }
-    }
-}
-
-template<typename T, class ListType>
-inline void ListTest<T, ListType>::testListRemove()
-try {
-    // Remove from the front (first)
-    T removedFirst = _list.remove_first();
-    if (removedFirst != _test_case[0]) {
-        throw RemoveFailureException(__func__,"Failed to remove element from the front correctly.");
-    }
-    if (_list.size() != _test_case.size() - 1) {
-        throw RemoveFailureException(__func__,"List size mismatch after removing element from the front.");
-    }
-
-    // Remove from the back (last)
-    T removedLast = _list.remove_last();
-    if (removedLast != _test_case[_test_case.size() - 1]) {
-        throw RemoveFailureException(__func__, "Failed to remove element from the back correctly.");
-    }
-    if (_list.size() != _test_case.size() - 2) {
-        throw RemoveFailureException(__func__, "List size mismatch after removing element from the back.");
-    }
-
-    // Remove from the middle (index = size/2)
-    size_t middleIndex = _list.size() / 2;
-    T removedMiddle = _list.remove(middleIndex);
-    if (removedMiddle != _test_case[middleIndex]) {
-        throw RemoveFailureException(__func__, "Failed to remove element from the middle correctly.");
-    }
-    if (_list.size() != _test_case.size() - 3) {
-        throw RemoveFailureException(__func__, "List size mismatch after removing element from the middle.");
-    }
-}
-catch (const RemoveFailureException& e) {
-    throw;  // Re-throw the exception for external handling
-}
 ```
 
+#### 주요 테스트 항목
 
+- **초기 상태 확인**
+- **앞/뒤/중간 삽입 테스트**
+- **앞/뒤/중간 삭제 테스트**
 
-간단하게 초기화,삽입,삭제를 테스트한다. 
+------
 
-### List 인터페이스
+### 🔌 List 인터페이스 정의
 
-```c++
-//IList.h
+#### 📄 `IList.h`
+
+```
 #pragma once
-#include<vector>
+#include <vector>
 
 template<typename T>
-class IList
-{
+class IList {
 public:
-	IList() = default;
-	virtual ~IList() = default;
+    IList() = default;
+    virtual ~IList() = default;
 
-	virtual size_t size() = 0;
-	virtual bool isEmpty() = 0;
-	virtual const std::vector<T>& elements() const = 0; //TODO: 추후 이터레이터로 변경
+    virtual size_t size() = 0;
+    virtual bool isEmpty() = 0;
+    virtual const std::vector<T>& elements() const = 0; // TODO: iterator로 교체 예정
 
-	virtual const T& get(int rank) = 0;
+    virtual const T& get(int rank) = 0;
 
-	virtual void append(int rank, const T& element) = 0;
-	void append_first(const T& element) { append(0, element); }
-	void append_last(const T& element) { append(this->size() - 1, element); }
-	virtual const T& remove(int rank) = 0;
-	virtual const T& remove_first() { return remove(0); }
-	virtual const T& remove_last() { return remove(this->size() - 1); }
-	virtual const size_t search(const T& element) = 0;
+    virtual void append(int rank, const T& element) = 0;
+    void append_first(const T& element) { append(0, element); }
+    void append_last(const T& element) { append(size() - 1, element); }
+
+    virtual const T& remove(int rank) = 0;
+    virtual const T& remove_first() { return remove(0); }
+    virtual const T& remove_last() { return remove(size() - 1); }
+
+    virtual const size_t search(const T& element) = 0;
 };
-
 ```
 
+> `append_first`, `append_last`, `remove_first`, `remove_last` 등은 기본 구현으로 제공되어 다양한 리스트 구현에서 재사용 가능합니다.
 
+------
 
-### 예외 
+### ⚠️ 예외 정의
 
-```c++
+#### 📄 `Exception.h`
+
+```
 #pragma once
-#include<iostream>
+#include <stdexcept>
+#include <string>
 
 class InitializationFailureException : public std::runtime_error {
 public:
-    explicit InitializationFailureException(const std::string& func, const std::string& msg)
+    InitializationFailureException(const std::string& func, const std::string& msg)
         : std::runtime_error("Initialization failed in " + func + " : " + msg) {}
 };
 
-class AppendFailureException :public std::runtime_error {
+class AppendFailureException : public std::runtime_error {
 public:
-    explicit AppendFailureException(const std::string& func, const std::string& msg)
-        :std::runtime_error("Initialization failed in " + func + " : " + msg) {}
+    AppendFailureException(const std::string& func, const std::string& msg)
+        : std::runtime_error("Append failed in " + func + " : " + msg) {}
+};
+
+class RemoveFailureException : public std::runtime_error {
+public:
+    RemoveFailureException(const std::string& func, const std::string& msg)
+        : std::runtime_error("Remove failed in " + func + " : " + msg) {}
 };
 ```
 
+------
 
+## 📌 정리
 
+- `IList` 인터페이스를 통해 다양한 리스트 구현체를 유연하게 테스트하고 확장할 수 있는 구조를 마련하였습니다.
+- 다음 단계에서는 **배열 기반 리스트 (CArrayList)** 를 구현하고, 해당 테스트 코드를 실행하여 검증할 예정입니다.
+
+> 💡 이후 구조 개선을 위해 `elements()` 메서드는 iterator 패턴으로 교체될 수 있습니다.
