--- a/_posts/2025-05-13-list1.md
+++ b/_posts/2025-05-13-list1.md
@@ -1,57 +1,71 @@
 ---
 layout: single
 title:  "자료구조 - 리스트1: ADT 정의"
-categories: 자료구조
-tag: [c++,data_structure]
+categories: c++ 자료구조 (중단)
+tag: [c++, data_structure]
 toc: true
 author_profile: false
 classes: wide
 ---
 
+# 📘 리스트 (List)
 
+## 📝 리스트란?
 
-# 리스트
+> **리스트(List)**는 **순서가 있는 수정 가능한 객체의 집합**입니다.  
+> 데이터의 삽입, 삭제, 검색 등을 효율적으로 수행할 수 있는 대표적인 선형 자료구조입니다.
 
-### 리스트란?
+---
 
-> 순서가 있는 수정가능한 객체의 집합
+## 📐 리스트 ADT 정의
 
+리스트 추상 자료형(ADT: Abstract Data Type)은 다음과 같은 연산들로 정의됩니다.
 
+### ✅ 일반 메소드
 
-### 리스트 ADT
+| 메소드           | 설명                             |
+| ---------------- | -------------------------------- |
+| `int size()`     | 리스트에 저장된 원소의 수를 반환 |
+| `bool isEmpty()` | 리스트가 비어있는지 여부를 반환  |
 
-- 일반 메소드
-  1. integer size(): 리스트의 크기 반환
-  2. boolean isEmpty(): 리스트가  비어있는지 여부 반환
+### 🔍 접근 메소드
 
-- 접근 메소드
+| 메소드               | 설명                          |
+| -------------------- | ----------------------------- |
+| `element get(int r)` | 순위 `r`에 위치한 원소를 반환 |
 
-  1. element get(r): 순위 r에 저장된 원소 반환
+### ✏️ 갱신 메소드
 
-- 갱신 메쏘드
+| 메소드                       | 설명                             |
+| ---------------------------- | -------------------------------- |
+| `void set(int r, element e)` | 순위 `r`의 원소를 `e`로 대체     |
+| `void add(int r, element e)` | 순위 `r` 앞에 원소 `e`를 삽입    |
+| `void addFirst(element e)`   | 리스트의 맨 앞에 원소 `e`를 삽입 |
+| `void addLast(element e)`    | 리스트의 맨 뒤에 원소 `e`를 삽입 |
+| `element remove(int r)`      | 순위 `r`의 원소를 삭제하고 반환  |
+| `element removeFirst()`      | 맨 앞의 원소를 삭제하고 반환     |
+| `element removeLast()`       | 맨 뒤의 원소를 삭제하고 반환     |
 
-  1. element set(r,e): 순위 r에 저장된 원소를 e로 대체
-  2. add(r,e): 순위 r앞에 원소 e를 삽입
-  3. addFirst(e): 맨 앞에 원소 e를 삽입
-  4. addLast(e): 맨 뒤에 원소 e를 추가
-  5. element remove(r): 순위 r에 저장된 원소를 삭제하여 반환
-  6. element removeFirst(): 맨 앞에 저장된 원소를 삭제하여 반환
-  7. element removeLast(): 맨 뒤에 저장된 원소를 삭제하여 반환
+---
 
-  
+## ⚠️ 예외 처리
 
-### 예외
+리스트 ADT 연산 중 잘못된 요청이 발생할 경우, 다음과 같은 **예외 클래스**를 정의하여 처리합니다.
 
-특정 ADT 작업 실행시에 발생 가능한 오류들은 예외로 처리한다.
+| 예외                     | 설명                                            |
+| ------------------------ | ----------------------------------------------- |
+| `InvalidRankException()` | 존재하지 않는 순위에 접근 시 발생               |
+| `FullListException()`    | 리스트가 가득 차 더 이상 삽입할 수 없을 때 발생 |
+| `EmptyListException()`   | 리스트가 비어 있어 삭제/접근이 불가능할 때 발생 |
 
-발생 가능한 오류들은 다음과 같다.
+---
 
-1. invalidRankException(): 부당한 순위에 대한 접근으로 인해 처리 불가능한 상황
-2. fullListException(): 리스트가 만원이라 처리 불가능한 상황
-3. emptyListException(): 리스트가 비어있어 처리 불가능한 상황
+## 💾 소스코드
 
+해당 ADT 및 구현 코드는 아래 GitHub 저장소에서 확인하실 수 있습니다:
 
+🔗 [GitHub Repository - KimHyunWoo0102/data_structure](https://github.com/KimHyunWoo0102/data_structure)
 
-### 소스코드
+---
 
-코드는 https://github.com/KimHyunWoo0102/data_structure 깃허브에 업로드 하였다!!
+> 다음 글에서는 리스트 ADT를 배열 기반으로 구현한 `ArrayList`에 대해 다뤄보겠습니다.
