--- a/_posts/2025-05-16-list3.md
+++ b/_posts/2025-05-16-list3.md
@@ -1,32 +1,28 @@
 ---
 layout: single
 title:  "자료구조 - 리스트3: ArrayList 정의"
-categories: 자료구조
-tag: [c++,data_structure]
+categories: c++ 자료구조 (중단)
+tag: [c++, data_structure]
 toc: true
 author_profile: false
 classes: wide
 typora-root-url: ../
+---
+
+# 🎯 목표
+
+자료구조 복습에서 가장 중요하게 생각한 부분은 **클래스로 구현하고 이를 잘 활용하는 것**이었습니다.  
+이를 위해 `List`를 인터페이스로 먼저 정의했고, 이번 글에서는 **배열 기반 리스트인 `ArrayList`**를 구현합니다.
 
 ---
 
+# 🧱 ArrayList 구현
 
+## 💻 코드
 
-# 목표
+### 📄 `CArrayList.h`
 
-자료구조 복습을 할때 가장 중요하게 생각한 부분은 바로 클래스로 구현 및 활용이였다.
-
-이를 위해 List를 인터페이스 클래스로 만들었으니 이번에는 ArrayList를 구현해보자
-
-
-
-
-
-# ArrayList 구현
-
-### 코드
-
-```c++
+```cpp
 #pragma once
 #include "IList.h"
 #include "Exception.h"
@@ -54,6 +50,7 @@ public:
     void append(int rank, const T& element) override;
     const T& remove(int rank) override;
     const size_t search(const T& element) override;
+
 private:
     size_t _max_allocation;
     size_t _current_index;
@@ -122,135 +119,110 @@ const size_t CArrayList<T>::search(const T& element)
             return i;
     }
 
-    return NOT_FOUND; // Not found
+    return NOT_FOUND;
 }
 ```
 
 
 
-### IList 수정
+# 🧩 IList 수정
 
-```c++
-//IList.h
-friend std::ostream& operator<<(std::ostream& os, const IList<T>& list) {
-	list.print(os);  // 자식 클래스가 구현한 print() 호출됨
-	return os;
+### 📄 `IList.h`
+
+```
+cpp복사편집friend std::ostream& operator<<(std::ostream& os, const IList<T>& list) {
+    list.print(os);  // 자식 클래스가 구현한 print() 호출됨
+    return os;
 }
 
 template<typename T>
 inline void IList<T>::print(std::ostream& os) const
 {
-	const auto elements = this->getElements();
-	os << "[";
-	for (const auto& it : elements) {
-		os << it << ", ";
-	}
-	os << "]";
+    const auto elements = this->getElements();
+    os << "[";
+    for (const auto& it : elements) {
+        os << it << ", ";
+    }
+    os << "]";
 }
 ```
 
+## ✨ 이유
+
+`operator<<`을 `IList` 내부에 멤버 함수로 정의하려고 했지만 **멤버 함수일 경우 `std::cout << obj;` 형식이 불가능**합니다.
+
+- `std::cout << value`는 `std::cout.operator<<(value)`와 같음
+- 따라서 멤버 함수로 정의하면 `obj.operator<<(value)`처럼 `obj`가 왼쪽에 와야 함
+- 우리가 원하는 방식은 `std::cout << obj;`이므로 **전역 friend 함수**로 선언해야 함
+
+📌 이를 해결하기 위해 `print()` 함수로 출력 로직을 넘기고 `operator<<`에서는 이를 호출하는 방식으로 처리했습니다.
+
+------
 
 
-IList는 2개의 함수가 추가되었다. <<오버로딩과 print함수이다. 
 
-처음에는 인터페이스 내부에 <<을 박아넣고 싶었는데 operator<<을 멤버 함수로 넣으면 오류가 발생하였다.
+# 🧪 테스트 코드 수정
 
-그 이유를 찾아보니 이유는 다음과 같았다.
+기존에는 테스트 케이스 벡터를 직접 참조하다 보니, 리스트에서 요소를 제거한 후 값이 일치하지 않는 문제가 발생했습니다.
+ → **리스트의 복사본을 먼저 만들어두고 이를 기준으로 검증**하도록 수정했습니다.
 
-```c++
-1. std::cout<<value == std::cout.operator<<(value);와 동일하다.
-2. 따라서 obj의 멤버 함수로 선언시 obj.operator<<(value); 로 동작시켜야한다.
-3. 실제로 클래스 안에 넣고 MyClass<<value; 꼴로 쓰면 정상 작동한다.
+### 📄 `ListTest.h` - `testListRemove()` 수정
+
 ```
-
-위의 방법처럼 사용한다면 멤버 함수로 써도되지만 저 방식은 내가 원하는 방식이 아니다.
-
-나는 std::cout<<obj; 시 출력이 자동으로 되기를 원하기에 꼼수를 사용했다.
-
-
-
-<<호출시 내부적으로 print()문을 실행시켜 os에 원하는 형식으로 문자열을 넘겨주고 os에 반환시켰다.
-
-
-
-### test 수정
-
-```c++
-//ListTest.h
-template<typename T>
+cpp복사편집template<typename T>
 inline void ListTester<T>::testListRemove()
 {
-    // 리스트의 복사본을 미리 만들어두기
     std::vector<T> listCopy = _list.getElements();
 
-    // 첫 번째 항목 제거
     T removedFirst = _list.remove_first();
     if (removedFirst != listCopy[0])
         throw RemoveFailureException(__func__, "Failed to remove element from the front correctly.");
     std::cout << _list << "\n";
 
-    // 복사본에서 첫 번째 요소 제거
     listCopy.erase(listCopy.begin());
+    if (_list.size() != listCopy.size() || _list.get(0) != listCopy[0])
+        throw RemoveFailureException(__func__, "List mismatch after removing from the front.");
 
-    if (_list.size() != listCopy.size())
-        throw RemoveFailureException(__func__, "List size mismatch after removing element from the front.");
-    if (_list.get(0) != listCopy[0])
-        throw RemoveFailureException(__func__, "List elements mismatch after removing from the front.");
-
-    // 마지막 항목 제거
     T removedLast = _list.remove_last();
-    if (removedLast != listCopy[listCopy.size() - 1])
+    if (removedLast != listCopy.back())
         throw RemoveFailureException(__func__, "Failed to remove element from the back correctly.");
     std::cout << _list << "\n";
 
-    // 복사본에서 마지막 요소 제거
     listCopy.pop_back();
+    if (_list.size() != listCopy.size() || _list.get(_list.size() - 1) != listCopy.back())
+        throw RemoveFailureException(__func__, "List mismatch after removing from the back.");
 
-    if (_list.size() != listCopy.size())
-        throw RemoveFailureException(__func__, "List size mismatch after removing element from the back.");
-    if (_list.get(_list.size() - 1) != listCopy[listCopy.size() - 1])
-        throw RemoveFailureException(__func__, "List elements mismatch after removing from the back.");
-
-    // 중간 항목 제거
     size_t middleIndex = _list.size() / 2;
     T removedMiddle = _list.remove(middleIndex);
     if (removedMiddle != listCopy[middleIndex])
         throw RemoveFailureException(__func__, "Failed to remove element from the middle correctly.");
     std::cout << _list << "\n";
 
-    // 복사본에서 중간 요소 제거
     listCopy.erase(listCopy.begin() + middleIndex);
-
-    if (_list.size() != listCopy.size())
-        throw RemoveFailureException(__func__, "List size mismatch after removing element from the middle.");
-    if (_list.get(middleIndex) != listCopy[middleIndex])
-        throw RemoveFailureException(__func__, "List elements mismatch after removing from the middle.");
+    if (_list.size() != listCopy.size() || _list.get(middleIndex) != listCopy[middleIndex])
+        throw RemoveFailureException(__func__, "List mismatch after removing from the middle.");
 }
 ```
 
+------
 
+# 🧪 테스트 실행
 
-이전에 멍청하게도 test_case를 받아서 list의 값을 제거후 비교하여 오류가 발생했었다.
+### 📄 `main.cpp`
 
+```
+cpp복사편집int main() {
+    std::unique_ptr<IList<int>> list = std::make_unique<CArrayList<int>>(50); // 최대 크기 50
 
-
-수정 후
-
-```c++
-int main() {
-    std::unique_ptr<IList<int>> list = std::make_unique<CArrayList<int>>(50); // 최대 크기 100 지정
-    // list->append(0, 10); // 사용 예시
-
-    std::vector<int>test_case{ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
+    std::vector<int> test_case{ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
     ListTester::ListTester<int> test(*list, test_case);
 
     test.TestList();
 
     return 0;
 }
-
 ```
 
-다음 코드 실행시에 결과는 다음과 같았다.
+### 🖼️ 결과
 
 ![test_result](/images/2025-05-16-list3/test_result.png)
